# HuffTree

./: .gitignore  CMakeLists.txt  HuffTree.cpp  HuffTree.h  Minheap.cpp  README.md  compress.cpp  decompress.cpp  endtoend.cc
